又一次重构，改进